--- a/about us.html
+++ b/about us.html
@@ -6,9 +6,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
-  <div class="navbar">
+ <div class="navbar">
         <div class="logo">
 <img src="amazon.png" alt="">
 </div>
@@ -21,7 +23,7 @@
     </ul>
     </div>
     
-    <div class="search">
+    <div class="search friend">
       <div class="select-1">
       <select name="" id="" class="select">
         <option>All</option>
@@ -34,13 +36,14 @@
         <option>Electronics</option>
       </select>
     </div>
-        <input class="search-input" type="search" placeholder="Search">
-        <button class="button">s</button>
+        <input class="search-input khan" type="search" placeholder="Search">
+        <button class="button"><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
     <div class="login">
         <a href="contact us.html" class="login-button">Login</a>
     </div>
 </div>
+ <div class="mobile"><p>hhfyfufyf</p></div>
 <!-- main -->
 
 <main class="about-main">
@@ -113,7 +116,7 @@
         <div class="footer-section">
           <h3>Customer Service</h3>
           <ul>
-            <li><a href="#">Contact Us</a></li>
+            <li><a href="contact us.html">Contact Us</a></li>
             <li><a href="#">Shipping Info</a></li>
             <li><a href="#">Returns</a></li>
             <li><a href="#">Privacy Policy</a></li>
@@ -123,12 +126,32 @@
 
         <div class="footer-section">
           <h3>Follow Us</h3>
-          <div class="social-links">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
-            <a href="#" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-linkedin"></a>
-            <a href="#" class="fa fa-youtube"></a>
+             <div class="social-links">
+            <a href="https://www.facebook.com/profile.php?id=61573422467649" target="_blank" aria-label="Facebook">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M22 12C22 6.477 17.523 2 12 2S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.99H7.898v-2.888h2.54V9.845c0-2.507 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.772-1.63 1.562v1.875h2.773l-.443 2.888h-2.33v6.99C18.343 21.128 22 16.991 22 12z"/>
+              </svg>
+            </a>
+            <a href="#" aria-label="Twitter">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M22.162 5.656c-.66.293-1.37.49-2.115.578a3.707 3.707 0 0 0 1.627-2.044 7.388 7.388 0 0 1-2.347.896 3.693 3.693 0 0 0-6.294 3.366A10.482 10.482 0 0 1 3.16 4.9a3.69 3.69 0 0 0 1.144 4.93 3.658 3.658 0 0 1-1.672-.462v.046c0 1.79 1.272 3.283 2.965 3.624-.31.084-.636.129-.972.129-.238 0-.47-.024-.696-.067.47 1.473 1.828 2.545 3.44 2.576A7.405 7.405 0 0 1 2 19.54a10.452 10.452 0 0 0 5.655 1.657c6.787 0 10.5-5.622 10.5-10.503 0-.16-.004-.318-.011-.475.72-.52 1.344-1.17 1.84-1.913z"/>
+              </svg>
+            </a>
+            <a href="#" aria-label="Instagram">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm5 6.5A4.5 4.5 0 1 0 16.5 13 4.505 4.505 0 0 0 12 8.5zm6.5-3.6a1.1 1.1 0 1 0 1.1 1.1 1.1 1.1 0 0 0-1.1-1.1z"/>
+              </svg>
+            </a>
+            <a href="https://www.linkedin.com/in/zakir-khan-8587b4357" target="_blank" aria-label="LinkedIn">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M20.447 20.452H17.24v-5.569c0-1.328-.024-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.037V9h3.114v1.561h.044c.434-.824 1.494-1.693 3.073-1.693 3.287 0 3.892 2.164 3.892 4.981v6.603zM5.337 7.433a1.804 1.804 0 1 1 0-3.608 1.804 1.804 0 0 1 0 3.608zM6.875 20.452H3.8V9h3.075v11.452z"/>
+              </svg>
+            </a>
+            <a href="https://www.youtube.com/@ComedyVault360" aria-label="YouTube">
+              <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M23.498 6.186a2.995 2.995 0 0 0-2.113-2.12C19.63 3.5 12 3.5 12 3.5s-7.63 0-9.385.566A2.995 2.995 0 0 0 .502 6.186 31.36 31.36 0 0 0 0 12a31.36 31.36 0 0 0 .502 5.814 2.995 2.995 0 0 0 2.113 2.12C4.37 20.5 12 20.5 12 20.5s7.63 0 9.385-.566a2.995 2.995 0 0 0 2.113-2.12A31.36 31.36 0 0 0 24 12a31.36 31.36 0 0 0-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+              </svg>
+            </a>
           </div>
           <h3 style="margin-top: 30px;">Newsletter</h3>
           <input type="email" placeholder="Enter your email" class="footer-email">
