--- a/about us.html
+++ b/about us.html
@@ -18,7 +18,7 @@
     <ul class="items">
         <a href="index.html"><li>Home</li></a>
         <a href="about us.html"><li>About Us</li></a>
-        <a href="contact us.html"><li>Contact Us</li></a>
+        <a href="contact us.html"><li>Contact</li></a>
       
     </ul>
     </div>
@@ -166,3 +166,4 @@
 
 </body>
 </html>
+
