Updated about us page

--- a/contact us.html
+++ b/contact us.html
@@ -17,7 +17,7 @@
     <ul class="items">
         <a href="index.html"><li>Home</li></a>
         <a href="about us.html"><li>About Us</li></a>
-        <a href="contact us.html"><li>Contact Us</li></a>
+        <a href="contact us.html"><li>Contact</li></a>
       
     </ul>
     </div>
@@ -133,4 +133,5 @@
 
 </body>
 </html>
+
 
