Updated about us page

--- a/about us.html
+++ b/about us.html
@@ -11,21 +11,17 @@
 </head>
 <body>
  <div class="navbar">
-        <div class="logo">
-<img src="amazon.png" alt="">
-</div>
-<div>
+      <div class="nav-top">    
+   <img src="amazon.png" alt="" class="logo-img"/>
     <ul class="items">
         <a href="index.html"><li>Home</li></a>
         <a href="about us.html"><li>About Us</li></a>
-        <a href="contact us.html"><li>Contact</li></a>
-      
+        <a href="contact us.html"><li>Contact Us</li></a>
+        <a href="contact us.html"><li>Login</li></a>
     </ul>
     </div>
-    
-    <div class="search friend">
-      <div class="select-1">
-      <select name="" id="" class="select">
+      <div class="search-bar">
+      <select class="select">
         <option>All</option>
         <option>Arts & Crafits</option>
         <option>Automotive</option>
@@ -35,15 +31,10 @@
         <option>Deals</option>
         <option>Electronics</option>
       </select>
-    </div>
-        <input class="search-input khan" type="search" placeholder="Search">
+        <input class="search-input" type="search" placeholder="Search">
         <button class="button"><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
-    <div class="login">
-        <a href="contact us.html" class="login-button">Login</a>
-    </div>
 </div>
- <div class="mobile"><p>hhfyfufyf</p></div>
 <!-- main -->
 
 <main class="about-main">
@@ -166,4 +157,3 @@
 
 </body>
 </html>
-
