--- a/contact us.html
+++ b/contact us.html
@@ -6,25 +6,22 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+                 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 <body>
  <div class="navbar">
-        <div class="logo">
-<img src="amazon.png" alt="">
-</div>
-<div>
+      <div class="nav-top">    
+   <img src="amazon.png" alt="" class="logo-img"/>
     <ul class="items">
         <a href="index.html"><li>Home</li></a>
         <a href="about us.html"><li>About Us</li></a>
-        <a href="contact us.html"><li>Contact</li></a>
-      
+        <a href="contact us.html"><li>Contact Us</li></a>
+        <a href="contact us.html"><li>Login</li></a>
     </ul>
     </div>
-    
-    <div class="search friend">
-      <div class="select-1">
-      <select name="" id="" class="select">
+      <div class="search-bar">
+      <select class="select">
         <option>All</option>
         <option>Arts & Crafits</option>
         <option>Automotive</option>
@@ -34,15 +31,10 @@
         <option>Deals</option>
         <option>Electronics</option>
       </select>
-    </div>
-        <input class="search-input khan" type="search" placeholder="Search">
+        <input class="search-input" type="search" placeholder="Search">
         <button class="button"><i class="fa-solid fa-magnifying-glass"></i></button>
     </div>
-    <div class="login">
-        <a href="contact us.html" class="login-button">Login</a>
-    </div>
 </div>
- <div class="mobile"><p>hhfyfufyf</p></div>
 <!-- main -->
   <h1 class="heading">Contact Us</h1>
   <form action="" class="form">
@@ -133,5 +125,3 @@
 
 </body>
 </html>
-
-
